test/testdata/classes/methods/init/invalid_property_assignment_error.lox
class Foo {
  init() {}
}
Foo().init.y = 1; // error: property assignment is not valid for 'function' value
